feat: add husky

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kid-lodash",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "typescript implement lodash",
   "main": "dist/kid-lodash.cjs",
   "module": "dist/kid-lodash.js",
@@ -14,7 +14,9 @@
     "test": "vitest",
     "lint": "eslint . --ext .ts",
     "coverage": "vitest run --coverage",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "prepare": "husky",
+    "commit": "vitest --watch=false --coverage"
   },
   "keywords": [],
   "author": "kid1110",
@@ -25,6 +27,7 @@
     "@vitest/coverage-istanbul": "^1.5.2",
     "@vitest/coverage-v8": "^1.5.2",
     "eslint": "^8.37.0",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.3",
